force-app/main/default/objects/IntegracionSAP__mdt/IntegracionSAP__mdt.object-meta.xml
<CustomObject>
    <description>Datos necesario para la integración con SAP</description>
    <label>IntegracionSAP</label>
    <pluralLabel>IntegracionSAP</pluralLabel>
</CustomObject>