force-app/main/default/objects/IntegracionSAP__mdt/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <description>indica la URL a la que apunta la llamada al servicio.</description>
    <label>Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>