force-app/main/default/objects/IntegracionSAP__mdt/fields/EndpointFamiliar__c.field-meta.xml
<CustomField>
    <fullName>EndpointFamiliar__c</fullName>
    <description>Indica el endpoint de llamada del servicio para crear familiares</description>
    <label>Endpoint familiar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>