force-app/main/default/objects/IntegracionSAP__mdt/fields/PasswordLogin__c.field-meta.xml
<CustomField>
    <fullName>PasswordLogin__c</fullName>
    <description>contraseña usada para el login en el servicio</description>
    <label>PasswordLogin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>