force-app/main/default/objects/IntegracionSAP__mdt/fields/UsuarioLogin__c.field-meta.xml
<CustomField>
    <fullName>UsuarioLogin__c</fullName>
    <description>Usuario para hacer el login al servicio</description>
    <label>UsuarioLogin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>